chore: add .gitignore, env-var DB config, CORS from env var